# blaze_zig

./: .gitignore  CLAUDE.md  README.md  blaze-zig-plan.md  pixi.toml  run.sh
.claude/: settings.json
.claude/hooks/: pixi-setup.mjs
.github/workflows/: ci.yml
blaze-zig-port/: README.md  a.sh  activate.sh  pixi.toml  run.sh
blaze-zig-port/cpp-bench/: main.cpp
blaze-zig-port/zig-blaze/: build.zig
bootstrap/: pixi.toml
cpp/: CMakeLists.txt  benchmark.cpp  example.cpp
cpp-bench/: CMakeLists.txt  example.cpp  main.cpp
recipes/blaze/: recipe.yaml
zig/: build.zig
zig-blaze/: build.zig
zig-blaze/src/: bench.zig  blaze.zig  example.zig  expr.zig  matrix.zig  vector.zig
zig-blaze/src/blas/: cblas.zig
zig-blaze/src/kernels/: simd.zig
zig/src/: benchmark.zig  blaze.zig  cblas.zig  main.zig  matrix.zig  vector.zig
